# Project-orbitary

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: comms_agent.py  memory_agent.py  mentor_agent.py  orchestrator.py  task_agent.py  tracker_agent.py
dashboard/: index.html  package-lock.json  package.json  playwright.config.js
dashboard/src/: App.jsx  index.css  useOrbitData.js
dashboard/src/panels/: AgentPanel.jsx  IntentPanel.jsx  MemoryPanel.jsx  VoicePanel.jsx
dashboard/tests/: dashboard.spec.js
evals/mentor_agent/: eval_results.jsonl  test_mentor_eval.py
evals/orchestrator/: eval_results.jsonl  test_orchestrator_eval.py
evals/tracker_agent/: eval_results.jsonl  test_tracker_eval.py
infra/: api_gateway.py  lambda_handler.py
mcp/: calendar_mcp.py  github_mcp.py  gmail_mcp.py
memory/: pgvector_store.py  redis_store.py
tests/integration/: test_routing.py
tests/unit/: test_agents.py  test_comms_agent.py  test_gemini_live.py  test_memory_agent.py  test_mentor_agent.py  test_orchestrator.py  test_pgvector_store.py  test_task_agent.py  test_tracker_agent.py
voice/: gemini_live.py
