[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "orbit"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-genai==1.70.0",
    "redis==7.4.0",
    "psycopg2-binary==2.9.11",
    "httpx==0.28.1",
    "fastapi==0.135.3",
    "uvicorn==0.42.0",
    "pydantic==2.12.5",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"
